# Mirage

./: .clang-format  .gitignore  CMakeLists.txt  \
include/agon/: estimator.h  optimizer.h  optimizers.h  optimizers.hpp  parameter.h  parameter.hpp
include/agon/core/: parameter.h
include/agon/detail/: arch.h  dedup.h  dedup.hpp  unpack.h  utils.h
include/agon/detail/simd/: arch.h  ops.h  types.h  utils.h
include/agon/detail/simd/ops/: add.h  cast.h  cast_trunc.h  div.h  fmadd.h  fmsub.h  gather.h  load.h  max.h  min.h  mul.h  mulhi.h  mullo.h  neg.h  reduce_add.h  round.h  scatter.h  set1.h  setzero.h  sign.h  sqrt.h  store.h  sub.h
include/agon/estimators/: rge.h
include/agon/optimizers/: optimizer.h  sgd.h
include/agon/optimizers/impls/: adam.h  adam.hpp  lion.h  lion.hpp  sarah.h  sarah.hpp  sgd.h  sgd.hpp  spider.h  svrg.h  svrg.hpp
include/agon/simd/: simd.h
include/mirage/: estimator.hpp  optimizer.hpp  parameter.hpp
include/mirage/detail/: dedup.hpp  matrix.hpp  random.hpp  thread.hpp  unpack.hpp  utils.hpp
include/mirage/estimator/: estimator.hpp
include/mirage/estimator/impls/: coordinate.hpp  gaussian.hpp
include/mirage/optimizer/: optimizer.hpp
include/mirage/optimizer/impls/: adam.hpp  lion.hpp  muon.hpp  sarah.hpp  sgd.hpp  soap.hpp  splus.hpp  svrg.hpp
src/: estimator.cpp  optimizer.cpp  parameter.cpp
src/optimizers/: optimizer.cpp  sgd.cpp
src/optimizers/impls/: adam.cpp  sarah.cpp  sgd.cpp  spider.cpp
